RESOLVED FIXED83310
[Chromium] Correct misleading trace event names in Canvas2DLayerChromium
https://bugs.webkit.org/show_bug.cgi?id=83310
Summary [Chromium] Correct misleading trace event names in Canvas2DLayerChromium
Justin Novosad
Reported 2012-04-05 13:46:05 PDT
The trace event "SkDeferredCanvas::flush" in paintContentsIfDirty() is poorly named because the code gets called even when the canvas is a regular SkCanvas, in which case it wraps a call to GrContext::flush if the canvas is accelerated. A couple lines lower, the trace event named "GrContext::flush" is also poorly named because it assumes that GrContext::flush is the main task performed by GraphicsContext3D::flush, which is not the case since the GrContext may have already been flushed by the call to SkCanvas::flush. Better just call it "GraphicsContext3D::flush"
Attachments
Patch (1.35 KB, patch)
2012-04-05 13:48 PDT, Justin Novosad
no flags
Justin Novosad
Comment 1 2012-04-05 13:48:35 PDT
Adrienne Walker
Comment 2 2012-04-05 14:16:46 PDT
Comment on attachment 135894 [details] Patch Yay, for less confusion.
WebKit Review Bot
Comment 3 2012-04-05 15:02:15 PDT
Comment on attachment 135894 [details] Patch Clearing flags on attachment: 135894 Committed r113384: <http://trac.webkit.org/changeset/113384>
WebKit Review Bot
Comment 4 2012-04-05 15:02:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.