[Chromium] Correct misleading trace event names in Canvas2DLayerChromium https://bugs.webkit.org/show_bug.cgi?id=83310

Patch by Justin Novosad <junov@chromium.org> on 2012-04-05
Reviewed by Adrienne Walker.

* platform/graphics/chromium/Canvas2DLayerChromium.cpp:
(WebCore::Canvas2DLayerChromium::paintContentsIfDirty):

Canonical link: https://commits.webkit.org/100716@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113384 268f45cc-cd09-0410-ab3c-d52691b4dbfc