Source/WebCore/platform/graphics/chromium/Canvas2DLayerChromium.cpp
@@ -121,11 +121,11 @@ void Canvas2DLayerChromium::paintContentsIfDirty(const CCOcclusionTracker* /* oc
         return;
 
     if (m_canvas) {
-        TRACE_EVENT("SkDeferredCanvas::flush", m_canvas, 0);
+        TRACE_EVENT("SkCanvas::flush", m_canvas, 0);
         m_canvas->flush();
     }
 
-    TRACE_EVENT("GrContext::flush", m_context, 0);
+    TRACE_EVENT("GraphicsContext3D::flush", m_context, 0);
     m_context->flush();
 }
 
